# hackaton

./: .gitignore  README.md
contract/: Makefile  README.md  Transactions.md  Validators.md  cabal.project  flake.nix  hackaton.cabal  hie.yaml
contract/app/: Main.hs
contract/compiled/: attestation.json  counterAttestation.json  signature.json  signer.json
contract/nix/: project.nix  shell.nix
contract/src/Plutarch/VeriScript/: Attestation.hs  CounterAttestation.hs  Signature.hs  Signer.hs
frontend/: Makefile  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: buildTransaction.ts  onchain.ts
frontend/src/components/: AttestButton.tsx  ConnectButton.tsx  CounterAttestButton.tsx  MintSignerButton.tsx  ProofButton.tsx  WalletConnect.tsx
frontend/src/hooks/: useWallet.tsx
frontend/src/pages/: Home.tsx  List.tsx  Proof.tsx
frontend/src/types/: contracts.ts  types.ts
frontend/src/utils/: convert.ts  wallet.ts
