cabal-version: 3.0
name:          hackaton
version:       0.1.0.0
author:        Adam, Mark
maintainer:    Adam, Mark

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Weverything -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wno-missing-import-lists -Wunused-imports
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind
    -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-implicit-prelude -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-missed-specialisations -Wno-all-missed-specializations
    -Wno-unrecognised-warning-flags -Wno-unrecognised-pragmas
    -Wno-operator-whitespace -fprint-equality-relations
    -fprint-explicit-kinds -fprint-explicit-foralls
    -Wno-unused-packages

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoMonomorphismRestriction
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

library
  -- import:         lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wno-missing-import-lists
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -Wno-unused-packages -Wno-missing-local-signatures
    -Wno-implicit-prelude -fprint-explicit-foralls
    -fprint-explicit-kinds -Wunused-imports
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-operator-whitespace -Wno-unsafe
    -Wno-prepositive-qualified-module -Wno-partial-fields
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-all-missed-specializations -Wno-unused-packages

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  exposed-modules:
    Plutarch.VeriScript.Attestation
    Plutarch.VeriScript.CounterAttestation
    Plutarch.VeriScript.Signature
    Plutarch.VeriScript.Signer

  -- Compile

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , data-default
    , generics-sop
    , plutarch
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text

  hs-source-dirs:     src

common dependencies
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cborg
    , data-default
    , directory
    , plutarch
    , plutarch-ledger-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text

executable export
  import:         lang
  import:         dependencies
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  hackaton
